--- a/src/components/animation/Animation.css
+++ b/src/components/animation/Animation.css
@@ -14,29 +14,78 @@
     padding-top: 15rem;
     width: 809px;
     height: 180px;
-    font-size: 52px;
+    font-size: 50px;
     font-weight: 500;
     line-height: 60px;
     letter-spacing: 0.012em;
     text-align: left;
     color: rgb(255, 255, 255);   
 }
+.experience,.cnex{
+    text-decoration: underline;
+    color: rgba(255, 120, 90, 1); 
+}
 .down{
-    
+    position: relative;
+    padding-left: 8rem;
+    padding-top: 13rem;
+    width: 815px;
+    color: rgba(182, 184, 185, 1);
+    font-size:16px;   
+}
+.download{
+    margin-top: 2rem;
+    position: relative;
+    margin-left: 8rem;
+    display: flex;
+    gap: 30px;
+    z-index: 3;
+}
+.download img{
+    height: 70px;
+    width: 200px; 
+    object-fit: contain; 
+}
+.download img :hover{
+    cursor: pointer;
+}
+.rotation img{
+    margin-top: -23.5rem;
+    margin-left: 17.5rem;
+    height: 45rem;
+    width: 45rem;  
 }
 .numbers{
-    display: none;
+    display: grid;
     width: 80%;
+    height:10vw;
   padding: 2rem;
+  transform: translate(9rem,-9rem);
+  z-index: 13;
+  position:absolute;
   border-radius: 10px;
   color: white;
   background: rgba(8, 45, 74, 1);
-  flex-direction: column;
-  justify-content: center;
   box-shadow: 0px 2px 12px 0px rgba(176, 184, 211, 0.5),
     0px 2px 4px 0px rgba(172, 188, 245, 0.5);
-  position: relative;
-  z-index: 12;
+}
+.clientsnumber{
+    display: flex;
+    justify-content: center;
+    gap: 22.5%;
+    width: 100%;
+    align-items: center;
+}
+.clientsnumber a{
+    text-decoration: none;
+    color: white;
+    font-size: 32px;
+    
+}
+.clients{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
 }
 
 .overlay{
