--- a/src/components/animation/Animation.css
+++ b/src/components/animation/Animation.css
@@ -1,6 +1,11 @@
 .background{
     margin-bottom: 4rem;
 }
+.container{
+  height: 115vh;
+  position: relative;
+  overflow: hidden;
+}
 .background img {
     position: relative;
     width: 100%;
@@ -9,7 +14,7 @@
     z-index: -1;
 }
 .top {
-    position: relative;
+    position: absolute;
     padding-left: 8rem;
     padding-top: 15rem;
     width: 809px;
@@ -21,6 +26,74 @@
     text-align: left;
     color: rgb(255, 255, 255);   
 }
+.top {
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
+}
+/* .t1{
+  animation: ani1 12s infinite;
+}
+.t2{
+  animation: ani2 12s infinite;
+}
+.t3{
+  animation: ani3 12s infinite;
+}
+.t4{
+  animation: ani4 12s infinite;
+}
+@keyframes ani1{
+    0% {
+      opacity: 0;
+    }
+    12.5% {
+      opacity: 1;
+    }
+    25% {
+      opacity: 0;
+    }
+}
+@keyframes ani2{
+  25% {
+    opacity: 0;
+  }
+  37.5% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+@keyframes ani3{
+  50% {
+    opacity: 0;
+  }
+  62.5% {
+    opacity: 1;
+  }
+  75% {
+    opacity: 0;
+  }
+}
+@keyframes ani4{
+  75% {
+    opacity: 0;
+  }
+  87.5% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+} */
 .experience,.cnex{
     text-decoration: underline;
     color: rgba(255, 120, 90, 1); 
@@ -41,6 +114,7 @@
     gap: 30px;
     z-index: 3;
 }
+
 .download img{
     height: 70px;
     width: 200px; 
@@ -49,18 +123,57 @@
 .download img :hover{
     cursor: pointer;
 }
-.rotation img{
-    margin-top: -23.5rem;
-    margin-left: 17.5rem;
-    height: 45rem;
-    width: 45rem;  
+.rotation{
+    position: absolute;
+    overflow: hidden;
+    z-index: 5;
+    
 }
+.rotating_animation{
+    margin-top: -11.5rem;
+    margin-left: 31.5rem;
+    height: 155rem;
+    width: 155rem; 
+    object-fit: contain; 
+    animation: rotate 12s infinite; 
+}
+
+  
+@keyframes rotate {
+    0% {
+      transform: rotate(0deg);
+    }
+    12.5% {
+      transform: rotate(0deg); 
+    }
+    25% {
+      transform: rotate(-90deg); 
+    }
+    37.5% {
+      transform: rotate(-90deg); 
+    }
+    50% {
+      transform: rotate(-167deg); 
+    }
+    62.5% {
+      transform: rotate(-167deg); 
+    }
+    75% {
+      transform: rotate(-275deg); 
+    }
+    87.5% {
+      transform: rotate(-275deg); 
+    }
+    100% {
+      transform: rotate(-360deg); 
+    }
+  }
 .numbers{
     display: grid;
     width: 80%;
     height:10vw;
   padding: 2rem;
-  transform: translate(9rem,-9rem);
+  transform: translate(9rem,-5rem);
   z-index: 13;
   position:absolute;
   border-radius: 10px;
