--- a/src/components/animation/Animation.css
+++ b/src/components/animation/Animation.css
@@ -26,88 +26,21 @@
     text-align: left;
     color: rgb(255, 255, 255);   
 }
-.top {
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
 
-.fade-in {
-  opacity: 1;
-}
-
-.fade-out {
-  opacity: 0;
-}
-/* .t1{
-  animation: ani1 12s infinite;
-}
-.t2{
-  animation: ani2 12s infinite;
-}
-.t3{
-  animation: ani3 12s infinite;
-}
-.t4{
-  animation: ani4 12s infinite;
-}
-@keyframes ani1{
-    0% {
-      opacity: 0;
-    }
-    12.5% {
-      opacity: 1;
-    }
-    25% {
-      opacity: 0;
-    }
-}
-@keyframes ani2{
-  25% {
-    opacity: 0;
-  }
-  37.5% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0;
-  }
-}
-@keyframes ani3{
-  50% {
-    opacity: 0;
-  }
-  62.5% {
-    opacity: 1;
-  }
-  75% {
-    opacity: 0;
-  }
-}
-@keyframes ani4{
-  75% {
-    opacity: 0;
-  }
-  87.5% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-} */
 .experience,.cnex{
     text-decoration: underline;
     color: rgba(255, 120, 90, 1); 
 }
 .down{
-    position: relative;
+    position: absolute;
     padding-left: 8rem;
-    padding-top: 13rem;
+    padding-top: 29rem;
     width: 815px;
     color: rgba(182, 184, 185, 1);
     font-size:16px;   
 }
 .download{
-    margin-top: 2rem;
+    padding-top: 32rem;
     position: relative;
     margin-left: 8rem;
     display: flex;
