--- a/src/components/aboutus/About_us.css
+++ b/src/components/aboutus/About_us.css
@@ -26,40 +26,53 @@ hr{margin: 0.5rem;
     letter-spacing: 0.012em;
     text-align: center;
 }
-.image_section{
+.grid_container{
+    display: grid;
+    gap: 24px;
     margin-top: 3rem;
     margin-left: 10rem;
+    width: 85%;
+    grid-template-columns: repeat(4,288px);
+}
+.item9{
+   
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+.item2{
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+.item3{
+  
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+.item1{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+.item4{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+.horizontal{
     display: grid;
     gap: 20px;
-    grid-template-columns:repeat(4,290px);
-    grid-template-rows: repeat(2,296px);
-    width: 83.3%;
-}
-
-
-
-.horizontal > div >img{
-    padding-bottom: 18px;
-}
-.image-item1{
-    grid-column: 1;
-    grid-row: 1;
-}
-.image-item3{
-    grid-column: 2;
-    grid-row: 1;
-}
-.image-item4{
-    grid-column: 3;
-    grid-row: 1;
-}
-.image-item2{
-    grid-column: 1 ;
-    grid-row: 2 / span 3;
-}
-.image-item5{
-    grid-column: 2;
-    grid-row: 2 
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
 }
 .ourstory{
     margin-top: 3rem;
@@ -78,11 +91,13 @@ hr{margin: 0.5rem;
     text-decoration: underline;
 }
 .storydiscription{
-    display: flex;
+    display: grid;
+
+    grid-template-columns: repeat(auto-fill,minmax(500px,auto));
     margin-top: 2rem;
 }
 .paragraph{
-    width: 54%;
+    width: 85%;
     padding-left: 1rem;
     font-weight: 400px;
     font-size: 15px;
