--- a/src/components/animation/Animation.css
+++ b/src/components/animation/Animation.css
@@ -31,16 +31,13 @@
     text-decoration: underline;
     color: rgba(255, 120, 90, 1); 
 }
-.down{
-    position: absolute;
-    padding-left: 8rem;
-    padding-top: 29rem;
+.top p{
     width: 815px;
     color: rgba(182, 184, 185, 1);
-    font-size:16px;   
+    font-size:14px;   
 }
-.download{
-    padding-top: 32rem;
+.image{
+    padding-top: 15rem;
     position: relative;
     margin-left: 8rem;
     display: flex;
@@ -48,12 +45,12 @@
     z-index: 3;
 }
 
-.download img{
+.image img{
     height: 70px;
     width: 200px; 
     object-fit: contain; 
 }
-.download img :hover{
+.image img :hover{
     cursor: pointer;
 }
 .rotation{
@@ -68,7 +65,7 @@
     height: 155rem;
     width: 155rem; 
     object-fit: contain; 
-    animation: rotate 12s infinite; 
+    animation: rotate 15s infinite; 
 }
 
   
@@ -76,31 +73,32 @@
     0% {
       transform: rotate(0deg);
     }
-    12.5% {
+    16.66% {
       transform: rotate(0deg); 
     }
     25% {
       transform: rotate(-90deg); 
     }
-    37.5% {
+    37% {
       transform: rotate(-90deg); 
     }
     50% {
       transform: rotate(-167deg); 
     }
-    62.5% {
+    66.66% {
       transform: rotate(-167deg); 
     }
     75% {
-      transform: rotate(-275deg); 
+      transform: rotate(-270deg); 
     }
-    87.5% {
-      transform: rotate(-275deg); 
+    90% {
+      transform: rotate(-270deg); 
     }
     100% {
       transform: rotate(-360deg); 
     }
-  }
+}
+
 .numbers{
     display: grid;
     width: 83.3%;
@@ -138,4 +136,266 @@
     position: absolute;
     background-color: rgba(0, 0, 0, 0.514);
     width: 100%; 
+}
+.top{
+  font-size: 55px;
+  font-weight: 550;
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  font-family: sans-serif;
+}
+.top p{
+  font-size: 14px;
+  color: grey;
+  margin-top: 1rem;
+  font-weight: 400;
+}
+.images{
+  height: 70px;
+  margin-top: 16rem;
+  padding-right: 1rem;
+  overflow: hidden;
+}
+
+.t1{
+  animation: ani1 15s infinite;
+}
+.t2{
+  animation: ani2 15s infinite;
+}
+.t3{
+  animation: ani3 15s infinite;
+}
+.t4{
+  animation: ani4 15s infinite;
+}
+
+@keyframes ani1 {
+  0%{
+      opacity: 0 ;
+  }
+  10%{
+      opacity: 1;
+  }
+  15%{
+      opacity: 1;
+  }
+  22%{
+      opacity: 0;     
+ }
+
+}
+
+@keyframes ani2 {
+  10%{
+      opacity: 0;
+  }
+  25%{
+      opacity: 1;
+  }
+  30%{
+      opacity: 1;
+  }
+  45%{
+      opacity: 0;
+  }
+}
+@keyframes ani3 {
+  35%{
+      opacity: 0;
+      transform: translateY(2rem);
+  }
+  50%{
+      opacity: 1;
+      transform: translateY(4rem);
+  }
+  60%{
+      opacity: 1;
+      transform: translateY(4rem);
+  }
+  70%{
+      opacity: 0;
+      transform: translateY(4rem);
+  }
+}
+
+@keyframes ani4 {
+  62%{
+      opacity: 0;
+      transform: translateY(4rem);
+  }
+  75%{
+      opacity: 1;
+      transform: translateY(5rem);
+  }
+  85%{
+      opacity: 1;
+      transform: translateY(5rem);
+  }
+  95%{
+      opacity: 1;
+      transform: translateY(5rem);
+  }
+  100%{
+      opacity: 0;
+      transform: translateY(5rem);
+  }
+}
+
+.image{
+  animation: ini 15s infinite;
+}
+
+@keyframes ini {
+  0%{
+      transform: translateY(0rem);
+  }
+  12.5%{
+      transform: translateY(0rem);
+  }
+  25%{
+      transform: translateY(-4.5rem);
+  }
+  37%{
+      transform: translateY(-4.5rem);
+  }
+  50%{
+      transform: translateY(0rem);
+  }
+  62%{
+      transform: translateY(0rem);
+  }
+  75%{
+      transform: translateY(-3rem);
+  }
+  83.5%{
+      transform: translateY(-3rem);
+  }
+  90%{
+      transform: translateY(-3rem);
+  }
+  100%{
+      transform: translateY(0rem);
+  }
+}
+
+.bot{
+  position: absolute;
+}
+.bimg{
+  width: 100vw;
+  height: 80vh;
+}
+
+.b1{
+  animation: bani1 15s infinite;
+}
+.b2{
+  animation: bani2 15s infinite;
+}
+.b3{
+  animation: bani3 15s infinite;
+}
+.b4{
+  animation: bani4 15s infinite;
+}
+
+@keyframes bani1 {
+  0% {
+      opacity: 1;
+  }
+  16.66% {
+      opacity: 1;
+  }
+  25% {
+      opacity: 1;
+  }
+  37% {
+      opacity: 0;
+  }
+  66.66% {
+      opacity: 0;     
+ }
+}
+
+@keyframes bani2 {
+  0%{
+      opacity: 0;
+  }
+  15% {
+      opacity: 0;
+  }
+  23% {
+      opacity: 1;
+  }
+  40% {
+      opacity: 1;
+  }
+  50% {
+      opacity: 0;
+  }
+  66.66% {
+      opacity: 0;
+  }
+  75%{
+      opacity: 0;
+  }
+  100%{
+      opacity: 0;
+  }
+}
+
+@keyframes bani3 {
+  0% {
+      opacity: 0;
+  }
+  16.66% {
+      opacity: 0;
+  }
+  33.33% {
+      opacity: 0;
+  }
+  50% {
+      opacity: 1;
+  }
+  55%{
+      opacity: 1;
+  }
+  66.66% {
+      opacity: 1;
+  }
+  75%{
+      opacity: 0;
+  }
+  100%{
+      opacity: 0;
+  }
+}
+
+@keyframes bani4 {
+  0% {
+      opacity: 0;
+  }
+  16.66% {
+      opacity: 0;
+  }
+  33.33% {
+      opacity: 0;
+  }
+  50% {
+      opacity: 0;
+  }
+  66.66% {
+      opacity: 0;
+  }
+  75%{
+      opacity: 1;
+  }
+  90%{
+      opacity: 1;
+  }
+  100%{
+      opacity: 0;
+  }
 }
