--- a/src/components/aboutus/About_us.css
+++ b/src/components/aboutus/About_us.css
@@ -1,217 +1,247 @@
-hr{margin: 0.5rem;
-    width:1.5rem;
-    border: none;
-    border-top: 3px solid;
-    text-align:left;
-    margin-left:0;
-   color: rgba(255, 120, 90, 1);
+hr {
+  margin: 0.5rem;
+  width: 1.5rem;
+  border: none;
+  border-top: 3px solid;
+  text-align: left;
+  margin-left: 0;
+  color: rgba(255, 120, 90, 1);
 }
-.about_us,.pioneer{
-    color: rgba(255, 120, 90, 1);
+.about_us,
+.pioneer {
+  color: rgba(255, 120, 90, 1);
 }
-.pioneer{
-    text-decoration: underline;
+.pioneer {
+  text-decoration: underline;
 }
-.heading{
-    display: flex;
-    justify-content: center;
-    margin-top: 11rem;
+.heading {
+  display: flex;
+  justify-content: center;
+  margin-top: 11rem;
 }
-.female{
-    display: flex;
-    justify-content: center;
-    font-size: 42px;
-    font-weight: 500;
-    line-height: 60px;
-    letter-spacing: 0.012em;
-    text-align: center;
-}
-.grid_container{
-    display: grid;
-    gap: 24px;
-    margin-top: 3rem;
-    margin-left: 10rem;
-    width: 85%;
-    grid-template-columns: repeat(4,288px);
-}
-.item9{
-   
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-.item2{
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-.item3{
-  
-    grid-column-start: 3;
-    grid-column-end: 4;
-    grid-row-start: 1;
-    grid-row-end: 2;
-}
-.item1{
-    grid-column-start: 1;
-    grid-column-end: 2;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-.item4{
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;
-}
-.horizontal{
-    display: grid;
-    gap: 20px;
-    grid-column-start: 4;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 3;
-}
-.ourstory{
-    margin-top: 3rem;
-    margin-left: 10rem;
+.female {
+  display: flex;
+  justify-content: center;
+  font-size: 42px;
+  font-weight: 500;
+  line-height: 60px;
+  letter-spacing: 0.012em;
+  text-align: center;
 }
 
-.our_story{
-    font-weight: 500;
-    font-size: 42px;
-    display: flex;
+.grid_container_aboutus {
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(270px,1fr));
+  grid-template-rows: 34vh;
+  width: 85%;
+  gap: 24px;
+ 
+  margin-top: 3rem;
+  margin-left: 10rem;
+
     
-    justify-content: center;
+  
+  /* gap: 24px;
+  margin-top: 3rem;
+  margin-left: 10rem;
+  width: 85%;
+  grid-template-columns: repeat(4, 288px); */
 }
-.story,.cnex_color{
-    color: rgba(255, 120, 90, 1);
-    text-decoration: underline;
+/* .item9 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+  grid-row-end: 2;
 }
-.storydiscription{
-    display: grid;
+.item2 {
+  grid-column-start: 2;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.item3 {
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 1;
+  grid-row-end: 2;
+}
+.item1 {
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.item4 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+.horizontal {
+  display: grid;
+  gap: 20px;
+  grid-column-start: 4;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+} */
+.ourstory {
+  margin-top: 3rem;
+  margin-left: 10rem;
+}
 
-    grid-template-columns: repeat(auto-fill,minmax(500px,auto));
-    margin-top: 2rem;
+.our_story {
+  font-weight: 500;
+  font-size: 42px;
+  display: flex;
+
+  justify-content: center;
 }
-.paragraph{
-    width: 85%;
-    padding-left: 1rem;
-    font-weight: 400px;
-    font-size: 15px;
+.story,
+.cnex_color {
+  color: rgba(255, 120, 90, 1);
+  text-decoration: underline;
+}
+.storydiscription {
+  display: grid;
+
+  grid-template-columns: repeat(auto-fill, minmax(500px, auto));
+  margin-top: 2rem;
+}
+.paragraph {
+  width: 85%;
+  padding-left: 1rem;
+  font-weight: 400px;
+  font-size: 15px;
+  line-height: 24px;
+  text-align: left;
+}
+.getintouch {
+  background: rgba(8, 45, 74, 1);
+  color: white;
+  border-radius: 8px;
+  width: 134px;
+  height: 40px;
+  margin-top: 1rem;
+}
+.getintouch:hover {
+  cursor: pointer;
+}
+.why_background {
+  margin-top: 6rem;
+  padding-bottom: 6rem;
+  background: rgba(8, 45, 74, 1);
+}
+.why_cnex {
+  margin-left: 10rem;
+}
+.whycnex {
+  padding-top: 10rem;
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 42px;
+  color: white;
+}
+.why_cnex_grid_container {
+  margin-top: 3rem;
+  display: grid;
+  width: 88.5%;
+  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-rows: repeat(1, 285px);
+}
+.why_item {
+  text-align: center;
+  border-radius: 8px;
+  padding: 1rem;
+  background: rgba(6, 34, 55, 1);
+}
+.why_icon {
+  padding-top: 2rem;
+}
+.fast {
+  padding-top: 1rem;
+  font-size: 22px;
+  font-weight: 400;
+  color: white;
+}
+.why_des {
+  font-size: 14px;
+  font-weight: 400;
+  padding: 1rem;
+  color: rgba(255, 255, 255, 1);
+}
+.headingS {
+  display: flex;
+  justify-content: center;
+  padding-top: 7rem;
+  padding-bottom: 2rem;
+}
+.feature_experience {
+  padding-bottom: 1rem;
+  color: white;
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 42px;
+}
+.discover {
+  color: rgba(134, 136, 138, 1);
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 4rem;
+}
+.features {
+  margin-left: 10rem;
+}
+.grid_container_feature {
+  display: grid;
+  gap: 19px;
+  width: 88.5%;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+}
+.feature_item {
+  background: rgba(6, 34, 55, 1);
+  text-align: center;
+  padding: 2rem;
+  border-radius: 20px;
+}
+.legal {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  font-size: 22px;
+  font-weight: 400;
+  color: white;
+}
+.feature_des {
+  color: rgba(195, 196, 197, 1);
+  font-weight: 400;
+  font-size: 14px;
+}
+.feature_icon {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+
+@media screen and (max-width: 451px) {
+  .heading {
+    margin-top: 5rem;
+  }
+  .about_us {
+    padding-bottom: 1rem;
+  }
+
+  .female {
+    font-size: 18px;
+    font-weight: 600;
+    padding: 0 2rem;
     line-height: 24px;
-    text-align: left;
+  }
+  .grid_container{
+    margin-left: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(100px,1fr));
+  }
 }
-.getintouch{
-    background:rgba(8, 45, 74, 1);
-    color: white;
-    border-radius: 8px;
-    width: 134px;
-    height: 40px;
-    margin-top: 1rem;
-}
-.getintouch:hover{
-    cursor: pointer;
-}
-.why_background{
-    margin-top: 6rem;
-    padding-bottom: 6rem;
-    background: rgba(8, 45, 74, 1);
-}
-.why_cnex{
-    margin-left: 10rem ;    
-}
-.whycnex{
-    padding-top: 10rem;
-    display: flex;
-    justify-content: center;
-    font-weight: 500;
-    font-size: 42px;
-    color: white;
-}
-.why_cnex_grid_container{
-    margin-top: 3rem;
-    display: grid;
-    width: 88.5%;
-    gap: 15px;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    grid-template-rows: repeat(1,285px); 
-}
-.why_item{
-    text-align: center;
-    border-radius: 8px;
-    padding: 1rem;
-    background: rgba(6, 34, 55, 1);
-}
-.why_icon{
-    padding-top: 2rem;
-}
-.fast{
-    padding-top: 1rem;
-    font-size: 22px;
-    font-weight: 400;
-    color: white;
-}
-.why_des{
-    font-size: 14px;
-    font-weight: 400;
-    padding: 1rem;
-    color: rgba(255, 255, 255, 1);
-}
-.headingS{
-    display: flex;
-    justify-content: center;
-    padding-top: 7rem;
-    padding-bottom: 2rem;
-}
-.feature_experience{
-    padding-bottom: 1rem;
-    color:white;
-    display: flex;
-    justify-content: center;
-    font-weight: 500;
-    font-size: 42px;
-}
-.discover{
-    color:  rgba(134, 136, 138, 1);
-    display: flex;
-    justify-content: center;
-    font-size: 14px;
-    font-weight: 400;
-    padding-bottom: 4rem;
-}
-.features{
-    margin-left: 10rem;
-}
-.grid_container_feature{
-    display: grid;
-    gap: 19px;
-    width: 88.5%;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
-}
-.feature_item{
-    background: rgba(6, 34, 55, 1);
-    text-align: center;
-    padding: 2rem;
-    border-radius: 20px;
-}
-.legal{
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    font-size: 22px;
-    font-weight: 400;
-    color: white;
-}
-.feature_des{
-    color: rgba(195, 196, 197, 1);
-    font-weight: 400;
-    font-size: 14px;
-}
-.feature_icon{
-    padding-top: 1rem;
-    padding-bottom: 2rem;
-}
-
-
