--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,42 +1,106 @@
-.nav_links{
-    background-color:white;
-    display: flex;
-    justify-content: space-between;
+.nav_links {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
 }
-.nav_logo{
-    margin: 1rem;
-    padding-left: 7rem;
+.nav_logo {
+  margin: 1rem;
+  padding-left: 7rem;
 }
-.nav_logo :hover{
-    cursor: pointer;
+.nav_logo :hover {
+  cursor: pointer;
 }
 
-.nav_links_container a{
+.nav_links_container a {
+  display: flex;
+  float: left;
+  font-size: 17px;
+  font-weight: 550;
+  line-height: 24px;
+  margin: 2rem;
+  text-decoration: none;
+  text-align: center;
+  color: rgba(8, 45, 74, 1);
+}
+.download_now {
+  display: flex;
+  align-items: center;
+  padding-right: 8rem;
+}
+.download_now button {
+  border: none;
+  border-radius: 8px;
+  height: 50px;
+  font-size: 16px;
+  font-weight: 500;
+  width: 168px;
+  color: white;
+  background-color: rgba(8, 45, 74, 1);
+}
+.download :hover {
+  cursor: pointer;
+}
+.svg-inline--fa {
+    height: 2.8em;
+    color: rgba(8, 45, 74, 1);
+    width: 2.8em;
+  }
+@media screen and (max-width: 451px) {
+  .nav_logo {
+    padding-left: 0rem;
+  }
+  .menu_icons {
     display: flex;
-    float: left;   
-    font-size: 17px;
-    font-weight: 550;
-    line-height: 24px;
-    margin:2rem;
-   text-decoration: none;
-   text-align: center;
-   color: rgba(8, 45, 74, 1);
-}
-.download_now{
-    display: flex;
-    align-items: center;
-    padding-right: 8rem;
-}
-.download_now button{
-    border: none;
-    border-radius: 8px;
-    height: 50px;
-    font-size: 16px;
-    font-weight: 500;
-    width: 168px;
-    color: white;
-    background-color: rgba(8, 45, 74, 1);
-}
-.download  :hover{
+    justify-content: center;
+    padding-top: 1.5rem;
+    padding-right: 1rem;
     cursor: pointer;
+  }
+  .nav_links_container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sign_up {
+    display: none;
+  }
+  .nav_links_container {
+    position: absolute;
+    display: none;
+    z-index: 10;
+    right: 0;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 8px;
+    padding-bottom: 1rem;
+    margin-top: 5rem;
+    box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+    -webkit-box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+    -moz-box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+  }
+  .navbar_container {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 13;
+  }
+  .nav_links_container.active {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .download_now {
+    padding-right: 0;
+    button {
+      font-size: 14px;
+      height: 5vh;
+      width: 35vw;
+    }
+  }
+  .nav_links_container {
+    display: none;
+    a{
+        margin: 0rem;
+    }
+  }
 }
