--- a/src/components/faq/FAQ.css
+++ b/src/components/faq/FAQ.css
@@ -1,168 +1,212 @@
-.testimonial{
-    display: flex;
-    margin-left: 10rem;
+.testimonial {
+  display: flex;
+  justify-content: center;
 }
-.faq{
-    margin-top: 8rem;
+.faq {
+  margin-top: 8rem;
 }
-.customer_say{
-    font-size: 42px;
-    font-weight: 500;
-    margin-left: 10rem;
+.customer_say {
+  font-size: 42px;
+  font-weight: 500;
+  margin-left: 10rem;
 }
-.what_our{
-    display: flex;
-    justify-content: space-between;
-    margin-right: 10rem;
-    padding-top: 1rem;
+.what_our {
+  display: flex;
+  justify-content: space-between;
+  margin-right: 10rem;
+  padding-top: 1rem;
 }
 .left_right {
-    display: flex;
-    gap: 10px;
-    padding-top: 0.3rem;
+  display: flex;
+  gap: 10px;
+  padding-top: 0.3rem;
 }
-.left_right button{
-    border: none;
-    border-radius: 100%;
-    background-color: rgba(255, 255, 255, 1);
-    height: 45px;
-    
-    width: 45px;
-    box-shadow: 0px 2px 12px 0px rgba(176, 184, 211, 0.5),
+.left_right button {
+  border: none;
+  border-radius: 100%;
+  background-color: rgba(255, 255, 255, 1);
+  height: 45px;
+
+  width: 45px;
+  box-shadow: 0px 2px 12px 0px rgba(176, 184, 211, 0.5),
     0px 2px 4px 0px rgba(172, 188, 245, 0.5);
-    
 }
-.left_right button:hover{
-    cursor: pointer;
+.left_right button:hover {
+  cursor: pointer;
 }
-.hr_underline hr{
-    width: 79%;
-    margin-top: 1.1rem;
-    margin-left: 10rem;
-    color: rgba(219, 219, 220, 1);
-    border: 1px solid;
+.hr_underline hr {
+  width: 79%;
+  margin-top: 1.1rem;
+  margin-left: 10rem;
+  color: rgba(219, 219, 220, 1);
+  border: 1px solid;
 }
 /* .feedback_slider{
     margin: 3rem 10rem;
 } */
-.feedback_slider{
-    margin: 3rem 10rem;
-    display: flex;
-    flex-direction: row;
-  
-    
+.feedback_slider {
+  margin: 3rem 10rem;
+  display: flex;
+  flex-direction: row;
 }
-.feedback_card{
-    height: 20rem;
-    position: relative;
-   
+.feedback_card {
+  height: 20rem;
+  position: relative;
 }
 .feedback_slider {
-    cursor: grab;
+  cursor: grab;
+}
+
+.feedback_slider:active {
+  cursor: grabbing;
+}
+.react-multiple-carousel__arrow {
+  display: none;
+}
+.feedback_background {
+  position: absolute;
+  z-index: -1;
+}
+.feedback_message {
+  position: absolute;
+  width: 23vw;
+  background-color: white;
+  box-shadow: 2px 4px 10px 0px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+  transform: translate(75%, 35%);
+  padding: 1.5rem;
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  width: 55%;
+}
+.message_top {
+  color: rgba(27, 27, 28, 1);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+.message_middle {
+  color: rgba(63, 72, 106, 1);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+}
+.message_bottom {
+  display: flex;
+  padding-top: 0.5rem;
+}
+.messager_name {
+  color: rgba(255, 120, 90, 1);
+  font-size: 12px;
+  font-weight: 400;
+}
+.faq,
+.faq * {
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.back_ground {
+  filter: brightness(30%);
+  width: 100%;
+  position: absolute;
+  z-index: -1;
+}
+.community_component {
+  display: flex;
+  padding: 10rem;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 10px;
+}
+.community_component .customer_says {
+  color: white;
+}
+.community_paragraph {
+  display: flex;
+
+  color: rgba(195, 196, 197, 1);
+  text-align: center;
+}
+.community_download {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  padding: 1rem;
+  /* padding: 1rem 0rem 0rem 7rem; */
+  img:hover {
+    cursor: pointer;
   }
-  
-  .feedback_slider:active {
-    cursor: grabbing;
+  img {
+    height: 35%;
+    width: 35%;
   }
-.react-multiple-carousel__arrow{
-    display: none;
 }
-.feedback_background{
-    position: absolute;
-    z-index: -1;
-}
-.feedback_message{
-    position: absolute;
-    width: 23vw;
-    background-color: white;
-    box-shadow: 2px 4px 10px 0px rgba(0, 0, 0, 0.08);
-    border-radius: 4px;
-    transform: translate(75%,35%); 
-    padding: 1.5rem;
-    display: flex;
-    align-items: flex-start;
-    gap: 10px;
-    width: 55%; 
-}
-.message_top{
-    color: rgba(27, 27, 28, 1);
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-}
-.message_middle{
-    color: rgba(63, 72, 106, 1);
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
-}
-.message_bottom{
-    display: flex;
-    padding-top: 0.5rem;
-    
-}
-.messager_name{
-    color: rgba(255, 120, 90, 1);
-    font-size: 12px;
-    font-weight: 400;
-}
-.faq, .faq * {
-    user-select: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-  }
-.back_ground{
-    filter: brightness(30%);
-   width: 100%;
-   position: absolute;
-   z-index: -1;
-}
-.community_component{
-   
-    display: flex;
-    padding: 10rem;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
-}
-.community_component .customer_says{
-    color: white;
-}
-.community_paragraph{
-    display: flex;
-   
-    color: rgba(195, 196, 197, 1);
-    text-align: center;
-}
-.community_download{
-   
-    display: flex;
-    gap: 20px;
-    justify-content: center;
-    padding: 1rem;
-    /* padding: 1rem 0rem 0rem 7rem; */
-    img:hover{
-        cursor: pointer;
-    }
-    img{
-        height: 35%;
-        width: 35%;
-    }
-}
-.customer_says{
-    font-size: 42px;
+.customer_says {
+  font-size: 42px;
   font-weight: 500;
 }
-.join_community{
-    margin-bottom: 10rem;
+.join_community {
+  margin-bottom: 10rem;
 }
-  
 
-  
-
-
-
-    
+@media screen and (max-width: 451px) {
+  .customer_say {
+    font-size: 24px;
+    font-weight: 500;
+    margin-left: 0rem;
+  }
+  .what_our {
+    margin: 0rem 1rem;
+  }
+  .feedback_slider {
+    margin: 3rem 1rem;
+  }
+  .feedback_card,
+  .feedback_background {
+    height: 25vh;
+  }
+  .hr_underline hr {
+    width: 92%;
+    margin-left: 1rem;
+  }
+  .faq {
+    margin-top: 3rem;
+  }
+  .accordion {
+    margin: 3rem 1rem;
+  }
+  .faq_top {
+    padding: 1rem;
+  }
+  .faq_heading {
+    font-size: 26px;
+  }
+  .feedback_message {
+    transform: translate(64%, 35%);
+    padding: 1rem;
+    width: 60%;
+    img {
+      height: 4vh;
+    }
+    .message_top {
+      font-size: 11px;
+      line-height: 15px;
+    }
+    .message_middle {
+      font-size: 8px;
+      padding-top: 0.3rem;
+      line-height: 10px;
+    }
+    .messager_name {
+      font-size: 9px;
+    }
+    hr {
+      width: 1rem;
+    }
+  }
+}
