--- a/src/components/faq/Accodion.css
+++ b/src/components/faq/Accodion.css
@@ -1,120 +1,172 @@
 .accordion {
-    margin: 14rem 10rem 10rem ;
-  }
-.faq_top{
-    display: flex;
-    justify-content: center;
+  margin: 14rem 10rem 10rem;
 }
-.acco__txt{
-    color: rgba(255, 120, 90, 1);
-    font-size: 16px;
-    font-weight: 500;
-    letter-spacing: -3%;
+.faq_top {
+  display: flex;
+  justify-content: center;
 }
-.faq_mid{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 1rem;
+.acco__txt {
+  color: rgba(255, 120, 90, 1);
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: -3%;
 }
-.faq_paragraph{
-    color: rgba(134, 136, 138, 1);
-    font-size: 14px;
-    font-weight: 400;
-    width: 50%;
-    line-height: 24px;
-    text-align: center;
-    margin-bottom: 3rem;
+.faq_mid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
-.left_faq{
-    grid-column: span 3 / auto;
+.faq_paragraph {
+  color: rgba(134, 136, 138, 1);
+  font-size: 14px;
+  font-weight: 400;
+  width: 50%;
+  line-height: 24px;
+  text-align: center;
+  margin-bottom: 3rem;
 }
-.faq_heading{
-    font-size: 44px;
-    font-weight: 500;
-    letter-spacing: -2%;
+.left_faq {
+  grid-column: span 3 / auto;
 }
-.faq_grid{
-    display: grid;
-    gap: 2rem;
-    grid-template-columns: repeat(auto-fill,minmax(200px,1fr));
+.faq_heading {
+  font-size: 44px;
+  font-weight: 500;
+  letter-spacing: -2%;
+}
+.faq_grid {
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 }
 .accordion-item {
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 1rem;
-    border-radius: 16px;
-  }
-  
-  .accordion-title {
-    border-radius: 16px;
-    background-color: #f4f4f4;
-    padding: 10px;
-    border: none;
-    width: 100%;
-    text-align: left;
-    cursor: pointer;
-    position: relative;
-  }
-  
-  .accordion-content {
-    padding: 10px;
-    display: none;
-  }
-  
-  .accordion-item.open .accordion-content {
-    display: block;
-  }
-  .arrow-icon {
-    position: absolute;
-    top: 50%;
-    right: 10px;
-    color: #7d7d7d; 
-    transform: translateY(-50%);
-    transition: transform 0.3s; 
-  }
-  
-  .rotated-icon{
-    transform:  rotate(45deg); 
-    transition: transform ease-in-out 0.3s; 
-  }
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 1rem;
+  border-radius: 16px;
+}
 
-  .item{
-    background-color: rgba(243, 243, 243, 1);
-    margin-bottom: 1rem;
-    
-    border-radius: 8px;
-    gap: 1rem;
-    
-  }
-  .title{
-    padding: 1.17rem;
-    display: flex;
-    justify-content: space-between;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
-    color: rgba(31, 32, 34, 1);
-    cursor: pointer;
-    align-items: center;
-  }
-  .content{
-    max-height: 0;
-    padding: 0 1rem ;
-    color: rgba(134, 136, 138, 1);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    overflow: hidden;
-    transition: all 0.5s cubic-bezier(0,1,0,1);
-  }
-  .content.show{
-    max-height: 9999px;
-  }
- @media screen and (max-width:451px) {
+.accordion-title {
+  border-radius: 16px;
+  background-color: #f4f4f4;
+  padding: 10px;
+  border: none;
+  width: 100%;
+  text-align: left;
+  cursor: pointer;
+  position: relative;
+}
+
+.accordion-content {
+  padding: 10px;
+  display: none;
+}
+
+.accordion-item.open .accordion-content {
+  display: block;
+}
+.arrow-icon {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  color: #7d7d7d;
+  transform: translateY(-50%);
+  transition: transform 0.3s;
+}
+
+.rotated-icon {
+  transform: rotate(45deg);
+  transition: transform ease-in-out 0.3s;
+}
+
+.item {
+  background-color: rgba(243, 243, 243, 1);
+  margin-bottom: 1rem;
+
+  border-radius: 8px;
+  gap: 1rem;
+}
+.title {
+  padding: 1.17rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  color: rgba(31, 32, 34, 1);
+  cursor: pointer;
+  align-items: center;
+}
+.content {
+  max-height: 0;
+  padding: 0 1rem;
+  color: rgba(134, 136, 138, 1);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  overflow: hidden;
+  transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+}
+.content.show {
+  max-height: 9999px;
+}
+.small_paragraph {
+  display: none;
+}
+.small_paragraph {
+  color: rgba(134, 136, 138, 1);
+  font-size: 14px;
+  font-weight: 400;
+  width: 100%;
+  line-height: 24px;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+@media screen and (max-width: 451px) {
   .accordion {
     margin: 3rem 1rem;
   }
   .faq_heading {
-    font-size: 26px;
+    font-size: 24px;
   }
- }
+  .faq_grid {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .small_paragraph {
+    display: block;
+    text-align: center;
+    padding: 0rem 1rem;
+  }
+  .faq_paragraph {
+    display: none;
+  }
+  .faq_image {
+    img {
+      width: 100%;
+    }
+  }
+  .svg-inline--fa {
+    height: 22px;
+  }
+  .community_paragraph {
+    display: none;
+  }
+  .back_ground {
+    width: 99%;
+  }
+  .customer_says {
+    font-size: 24px;
+    font-weight: 600;
+  }
+  .community_component {
+   
+    padding: 1rem 0rem 0rem 0rem;
+  }
+  .join_community {
+    margin-bottom: 0rem;
+  }
+  .title {
+    font-size: 14px;
+    font-weight: 600;
+  }
+}
