--- a/src/components/aboutus/About_us.css
+++ b/src/components/aboutus/About_us.css
@@ -1,23 +1,25 @@
-hr{margin: 0.5rem;
-  width:1.5rem;
+hr {
+  margin: 0.5rem;
+  width: 1.5rem;
   border: none;
   border-top: 3px solid;
-  text-align:left;
-  margin-left:0;
- color: rgba(255, 120, 90, 1);
-}
-.about_us,.pioneer{
+  text-align: left;
+  margin-left: 0;
   color: rgba(255, 120, 90, 1);
 }
-.pioneer{
+.about_us,
+.pioneer {
+  color: rgba(255, 120, 90, 1);
+}
+.pioneer {
   text-decoration: underline;
 }
-.heading{
+.heading {
   display: flex;
   justify-content: center;
   margin-top: 11rem;
 }
-.female{
+.female {
   display: flex;
   justify-content: center;
   font-size: 42px;
@@ -26,55 +28,52 @@ hr{margin: 0.5rem;
   letter-spacing: 0.012em;
   text-align: center;
 }
-.grid_container{
+.grid_container {
   display: flex;
   justify-content: center;
   width: 100vw;
   margin: 2rem 0;
   img {
-      max-width: 2000px;
-      width: 80vw;
-      margin: 0 auto;
+    max-width: 2000px;
+    width: 80vw;
+    margin: 0 auto;
   }
-  
 }
 
 .grid_container_responsive {
   display: none;
 }
-.item9{
- 
+.item9 {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 2;
 }
-.item2{
+.item2 {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 2;
 }
-.item3{
-
+.item3 {
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 2;
 }
-.item1{
+.item1 {
   grid-column-start: 1;
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 3;
 }
-.item4{
+.item4 {
   grid-column-start: 2;
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 3;
 }
-.horizontal{
+.horizontal {
   display: grid;
   gap: 20px;
   grid-column-start: 4;
@@ -82,29 +81,30 @@ hr{margin: 0.5rem;
   grid-row-start: 1;
   grid-row-end: 3;
 }
-.ourstory{
+.ourstory {
   margin-top: 3rem;
   margin-left: 10rem;
 }
 
-.our_story{
+.our_story {
   font-weight: 500;
   font-size: 42px;
   display: flex;
-  
+
   justify-content: center;
 }
-.story,.cnex_color{
+.story,
+.cnex_color {
   color: rgba(255, 120, 90, 1);
   text-decoration: underline;
 }
-.storydiscription{
+.storydiscription {
   display: grid;
 
-  grid-template-columns: repeat(auto-fill,minmax(500px,auto));
+  grid-template-columns: repeat(auto-fill, minmax(500px, auto));
   margin-top: 2rem;
 }
-.paragraph{
+.paragraph {
   width: 85%;
   padding-left: 1rem;
   font-weight: 400px;
@@ -112,26 +112,26 @@ hr{margin: 0.5rem;
   line-height: 24px;
   text-align: left;
 }
-.getintouch{
-  background:rgba(8, 45, 74, 1);
+.getintouch {
+  background: rgba(8, 45, 74, 1);
   color: white;
   border-radius: 8px;
   width: 134px;
   height: 40px;
   margin-top: 1rem;
 }
-.getintouch:hover{
+.getintouch:hover {
   cursor: pointer;
 }
-.why_background{
+.why_background {
   margin-top: 6rem;
   padding-bottom: 6rem;
   background: rgba(8, 45, 74, 1);
 }
-.why_cnex{
-  margin-left: 10rem ;    
+.why_cnex {
+  margin-left: 10rem;
 }
-.whycnex{
+.whycnex {
   padding-top: 10rem;
   display: flex;
   justify-content: center;
@@ -139,104 +139,208 @@ hr{margin: 0.5rem;
   font-size: 42px;
   color: white;
 }
-.why_cnex_grid_container{
+.why_cnex_grid_container {
   margin-top: 3rem;
   display: grid;
   width: 88.5%;
   gap: 15px;
-  grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-  grid-template-rows: repeat(1,285px); 
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: repeat(1, 285px);
 }
-.why_item{
+.why_item {
   text-align: center;
   border-radius: 8px;
   padding: 1rem;
   background: rgba(6, 34, 55, 1);
 }
-.why_icon{
+.why_icon {
   padding-top: 2rem;
 }
-.fast{
+.fast {
   padding-top: 1rem;
   font-size: 22px;
   font-weight: 400;
   color: white;
 }
-.why_des{
+.why_des {
   font-size: 14px;
   font-weight: 400;
   padding: 1rem;
   color: rgba(255, 255, 255, 1);
 }
-.headingS{
+.headingS {
   display: flex;
   justify-content: center;
   padding-top: 7rem;
   padding-bottom: 2rem;
 }
-.feature_experience{
+.feature_experience {
   padding-bottom: 1rem;
-  color:white;
+  color: white;
   display: flex;
   justify-content: center;
   font-weight: 500;
   font-size: 42px;
 }
-.discover{
-  color:  rgba(134, 136, 138, 1);
+.discover {
+  color: rgba(134, 136, 138, 1);
   display: flex;
   justify-content: center;
   font-size: 14px;
   font-weight: 400;
   padding-bottom: 4rem;
 }
-.features{
+.features {
   margin-left: 10rem;
 }
-.grid_container_feature{
+.grid_container_feature {
   display: grid;
   gap: 19px;
   width: 88.5%;
-  grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
-.feature_item{
+.feature_item {
   background: rgba(6, 34, 55, 1);
   text-align: center;
   padding: 2rem;
   border-radius: 20px;
 }
-.legal{
+.legal {
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: 22px;
   font-weight: 400;
   color: white;
 }
-.feature_des{
+.feature_des {
   color: rgba(195, 196, 197, 1);
   font-weight: 400;
   font-size: 14px;
 }
-.feature_icon{
+.feature_icon {
   padding-top: 1rem;
   padding-bottom: 2rem;
 }
 
-@media screen and (max-width: 1080px){
+@media screen and (max-width: 1080px) {
   .grid_container {
-      display: none;
+    display: none;
   }
 
   .grid_container_responsive {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-      img {
-          width: 60vw;
-          min-width: 400px;
-          object-fit: cover;
-      }
+    img {
+      width: 60vw;
+      min-width: 400px;
+      object-fit: cover;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .heading {
+    margin-top: 3rem;
+  }
+  .about_us {
+    padding-bottom: 1rem;
+    font-weight: 600;
+  }
+
+  .female {
+    font-size: 26px;
+    font-weight: 600;
+    padding: 0 2rem;
+    line-height: 24px;
+    padding-bottom: 1rem;
+  }
+  .paragraph {
+    padding-left: 0;
+    width: 91vw;
+
+    p {
+      font-weight: 550;
+      font-size: 20px;
+      color: rgba(27, 27, 28, 1);
+      font-family: Vietnam Pro;
+    }
+  }
+  .why_background {
+    margin: 3rem 1rem;
+  }
+  .why_cnex {
+    margin-left: 0rem;
+  }
+  .why_cnex_grid_container {
+    margin: 3rem 1.5rem;
+  }
+  .features {
+    margin-left: 0rem;
+  }
+  .headingS {
+    padding: 1rem 0rem;
+  }
+  .whycnex {
+    padding-top: 3rem;
+    font-size: 32px;
+  }
+  .feature_experience {
+    display: block;
+    text-align: center;
+    font-size: 32px;
+  }
+  .discover {
+    font-size: 18px;
+    padding: 0rem 1rem;
+    text-align: center;
+  }
+  .grid_container_feature {
+    margin: 0rem 1.5rem;
+  }
+  .why_background {
+    padding-bottom: 3rem;
+  }
+  .about_us {
+    padding-bottom: 0rem;
+  }
+  .getintouch {
+    margin-top: 0rem;
+  }
+  .do_not_show {
+    display: none;
+  }
+  .ourstory {
+    margin: 0rem 1rem;
+    .our_story {
+      display: none;
+    }
+  }
+  .storydiscription {
+    img {
+      display: none;
+    }
+  }
+}
+
+@media (min-width: 546px) and (max-width: 633px) {
+  .female {
+    font-size: 22px;
+  }
+
+  .whycnex {
+    font-size: 30px;
+  }
+}
+
+@media (min-width: 451px) and (max-width: 546px) {
+  .female {
+    font-size: 20px;
+  }
+
+  .whycnex {
+    font-size: 28px;
   }
 }
 
@@ -259,17 +363,16 @@ hr{margin: 0.5rem;
   .paragraph {
     padding-left: 0;
     width: 91vw;
-    
-   p{
-    font-weight: 550;
-    font-size: 20px;
-    color: rgba(27, 27, 28, 1);
-    font-family:  Vietnam Pro;
 
-   }
+    p {
+      font-weight: 550;
+      font-size: 20px;
+      color: rgba(27, 27, 28, 1);
+      font-family: Vietnam Pro;
+    }
   }
   .why_background {
-  margin: 3rem 1rem;
+    margin: 3rem 1rem;
   }
   .why_cnex {
     margin-left: 0rem;
@@ -280,47 +383,47 @@ hr{margin: 0.5rem;
   .features {
     margin-left: 0rem;
   }
-  .headingS{
+  .headingS {
     padding: 1rem 0rem;
   }
-  .whycnex{
+  .whycnex {
     padding-top: 3rem;
-    font-size: 24px;
+    font-size: 26px;
   }
-  .feature_experience{
+  .feature_experience {
     display: block;
     text-align: center;
-    font-size: 24px;
+    font-size: 26px;
   }
-  .discover{
+  .discover {
     font-size: 14px;
     padding: 0rem 1rem;
     text-align: center;
   }
-  .grid_container_feature{
+  .grid_container_feature {
     margin: 0rem 1.5rem;
   }
-  .why_background{
+  .why_background {
     padding-bottom: 3rem;
   }
   .about_us {
-    padding-bottom: 0rem;}
+    padding-bottom: 0rem;
+  }
   .getintouch {
     margin-top: 0rem;
   }
-  .do_not_show{
+  .do_not_show {
     display: none;
   }
   .ourstory {
     margin: 0rem 1rem;
-    .our_story{
+    .our_story {
       display: none;
     }
   }
-  .storydiscription{
-    img{
+  .storydiscription {
+    img {
       display: none;
     }
   }
- 
 }
