--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -40,23 +40,153 @@
 .download :hover {
   cursor: pointer;
 }
+.small_download {
+  display: flex;
+}
+.menu_icons {
+  display: none;
+}
 .svg-inline--fa {
-    height: 2.8em;
+  height: 2em;
+  color: rgba(8, 45, 74, 1);
+  width: 2.8em;
+}
+
+@media (min-width: 546px) and (max-width: 769px) {
+  .nav_logo {
+    padding-left: 2rem;
+  }
+  .svg-inline--fa {
+    height: 3em;
     color: rgba(8, 45, 74, 1);
     width: 2.8em;
-  }
-
-  .small_download{
-    display: flex;
-  }
-@media screen and (max-width: 451px) {
-  .nav_logo {
-    padding-left: 0rem;
   }
   .menu_icons {
     display: flex;
     justify-content: center;
-    
+
+    padding-right: 2rem;
+    cursor: pointer;
+    align-items: center;
+  }
+  .nav_links_container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sign_up {
+    display: none;
+  }
+  .nav_links_container {
+    position: absolute;
+    display: none;
+    z-index: 10;
+    right: 0;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 8px;
+    padding-bottom: 1rem;
+    margin-top: 5rem;
+    box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+    -webkit-box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+    -moz-box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+  }
+  .navbar_container {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 13;
+  }
+  .nav_links_container.active {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .download_now {
+    padding-right: 1rem;
+    button {
+      font-size: 16px;
+      height: 4vh;
+      width: 30vw;
+    }
+  }
+  .nav_links_container {
+    display: none;
+    a {
+      margin: 0rem;
+    }
+  }
+}
+
+@media (min-width: 451px) and (max-width: 546px) {
+  .nav_logo {
+    padding-left: 2rem;
+  }
+  .menu_icons {
+    display: flex;
+    justify-content: center;
+
+    padding-right: 2rem;
+    cursor: pointer;
+    align-items: center;
+  }
+  .nav_links_container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sign_up {
+    display: none;
+  }
+  .nav_links_container {
+    position: absolute;
+    display: none;
+    z-index: 10;
+    right: 0;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 8px;
+    padding-bottom: 1rem;
+    margin-top: 5rem;
+    box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+    -webkit-box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+    -moz-box-shadow: -9px 17px 14px -1px rgba(147, 147, 147, 0.62);
+  }
+  .navbar_container {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 13;
+  }
+  .nav_links_container.active {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .download_now {
+    padding-right: 1rem;
+    button {
+      font-size: 14px;
+      height: 3vh;
+      width: 30vw;
+    }
+  }
+  .nav_links_container {
+    display: none;
+    a {
+      margin: 0rem;
+    }
+  }
+}
+
+@media screen and (max-width: 451px) {
+  .nav_logo {
+    padding-left: 0rem;
+  }
+
+  .menu_icons {
+    display: flex;
+    justify-content: center;
     padding-right: 1rem;
     cursor: pointer;
     align-items: center;
@@ -98,14 +228,14 @@
     padding-right: 0;
     button {
       font-size: 14px;
-      height: 4vh;
+      height: 2.5vh;
       width: 30vw;
     }
   }
   .nav_links_container {
     display: none;
-    a{
-        margin: 0rem;
+    a {
+      margin: 0rem;
     }
   }
 }
